--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
       <meta name="Description"
             content="Developer and digital designer, based in Eindhoven.">
       <title>Luca Claessens</title>
+      <link rel="icon"
+            href="favicon.ico">
       <link rel="stylesheet"
             href="bundle.css">
 </head>
